# quickaddon_book

./: .gitignore  README.md  book.toml  deploy.ps1  deploy.toml  pyproject.toml  revision1.toml  setup.ps1_
booksrc/: SUMMARY.md  SUMMARY_revision1.md  index.md
booksrc/topics/: 01_Introduction.md  02_Mental_Model.md  03_First_Plugin.md  04_Standalone_Host.md  05_Embedding_Plugins.md  06_Shared_Keys.md  07_HostAPI.md  08_Property_Ownership.md  09_Multi-Plugin_Systems.md  10_Scheduler_Preview.md  11_Refactoring_Existing_Addon_into_Host.md  12_Refactoring_Existing_Addon_into_Plugin.md  13_ch.md  14_ch.md  15_ch.md  16_conclusion.md  decorator_reference.md  errorreporting.md  hostapi_v2_spec.md  injection_contract_v1.md  migration.md  qa_scaffold_cli_reference.md  test.md
docs/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-93722d3d.js  toc-e7ed0be6.js  toc.html
docs/topics/: 01_Introduction.html  02_Mental_Model.html  03_First_Plugin.html  04_Standalone_Host.html  05_Embedding_Plugins.html  06_Shared_Keys.html  07_HostAPI.html  08_Property_Ownership.html  09_Multi-Plugin_Systems.html  10_Scheduler_Preview.html  11_Refactoring_Existing_Addon_into_Host.html  12_Refactoring_Existing_Addon_into_Plugin.html  13_ch.html  14_ch.html  15_ch.html  16_conclusion.html  decorator_reference.html  errorreporting.html  hostapi_v2_spec.html  injection_contract_v1.html  migration.html  qa_scaffold_cli_reference.html
src/quickaadon_book/: deploy.py  fixfm.py  hydrate.py  make_files.py  rep_tit.py  scan.py
src/quickaddon_book/: __init__.py  audit_deploy.py  (+4 more)
